# Aurivo-Medya-Player

./: .gitignore  BUILD-TEST.md  README.md  WINDOWS-BUILD.md  WINDOWS-DEV.md  audioEngine.js  eqPresetsRenderer.js  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  soundEffectsRenderer.js
.github/workflows/: build-windows.yml
Aurivo-Dawlod/: aurivo_download_cli.py  yt_dlp_utils.py
modules/soundEffects/widgets/: colorKnob.js  rainbowSlider.js
native/: binding.gyp
native-dist/: aurivo-projectm-visualizer
scripts/: generate-transparent-icon.sh  generate-windows-ico.js  install-desktop-linux.sh  prepare-win-resources.js  run-aurivo.sh  verify-linux-artifacts.js  verify-win-artifacts.js
styles/: main.css
visualizer/: CMakeLists.txt  main_imgui.cpp
